# turtle

./: .gitignore  Abgabe.md  Cargo.toml  Extensions.md  README.md  Todo.md  openapi.yaml  tmp.tg  turtle web ui.txt
ccomp/: sdlinterf.c  sdlinterf.h  turtleinterf.c  turtleinterf.h
examples/: Cargo.toml  button_control.tg  drachenkurve.tg  dreieck.tg  events.tg  koch_kurve.tg  levy_c.tg  mouse_control.tg  multithreading.tg  pap.tg  params.tg  pyth_frak.tg  pyth_frak_split.tg  rand_path.tg  types.tg
examples/src/: lib.rs
src/: ccomp.rs  cli.rs  features.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  pos.rs  prog.rs  sr_parser.rs
src/ccomp/: context.rs  mod.rs
src/debugger/: commands.rs  config.rs  controller.rs  mod.rs  runner.rs  task.rs  turtle.rs  varlist.rs  window.rs
src/debugger/interface/: channel.rs  commands.rs  mod.rs  shell.rs  strings.rs  terminal.rs  vscode.rs
src/debugger/test/: mod.rs
src/debugger/window/: buffered.rs  channel.rs  mod.rs  sdl.rs
src/interpreter/: debugger.rs  mod.rs  turtle.rs  varlist.rs  window.rs
src/parser/: tokens.rs
src/prog/: lexer.rs  mod.rs  optimization.rs  parser.rs  semcheck.rs  side_effects.rs
src/prog/lexer/: mod.rs  test.rs
src/prog/parser/: mod.rs  statements.rs
src/prog/parser/test/: exprs.rs  mod.rs  statements.rs
src/prog/semcheck/: expr.rs  mod.rs  statements.rs  test.rs  variable.rs
src/tokens/: expr.rs  keywords.rs  mod.rs  predef_vars.rs  statements.rs  values.rs
turtle-web/: Cargo.toml  Dockerfile
turtle-web/assets/: index.css  index.html  term.html  viewRun.html
turtle-web/assets/scripts/: exampleList.js  example_list.js  viewRun.js
turtle-web/assets/styles/: exampleList.css  viewRun.css
turtle-web/src/: api.rs  err.rs  main.rs  prog.rs  run.rs
turtle-web/web/: index.css  index.html  index.js
