[package]
name = "turtle"
version = "0.3.0"
authors = ["Bernhard Lindner lindbe.pi22@stud.gera.dhge.de"]
edition = "2021"
description = "Compiler, Interpreter and Debugger for the turtle language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.7"
rand = "0.9"
sdl2 = { version = "0.37", features = ["bundled"] }
paste = "1.0"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
thiserror = "2.0"