[workspace]
resolver = "2"
members = ["turtle-web", "examples"]
package.authors = ["Bernhard Lindner lindbe.pi22@stud.gera.dhge.de"]

[package]
name = "turtle"
version = "0.3.2"
authors.workspace = true
edition = "2024"
description = "Compiler, Interpreter and Debugger for the turtle language"
rust-version = "1.88"

[features]
default = ["examples", "sdl"]
examples = ["dep:turtle-examples"]
sdl = ["dep:sdl2"]

[[bin]]
name = "turtle"
required-features = ["examples", "sdl"]

[dependencies]
indexmap = "2.7"
rand = "0.9"
sdl2 = { version = "0.37", features = [
    "bundled",
    "static-link",
], optional = true }
paste = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
turtle-examples = { path = "examples", optional = true }
parking_lot = "0.12"
