[package]
name = "turtle-web"
version = "0.1.0"
authors.workspace = true
edition = "2021"
description = "Webserver for turtle graphics programs"

[dependencies]
turtle = { path = ".." }
serde_json = "1.0"
parking_lot = "0.12"
axum = "0.8"

[dependencies.tokio]
version = "1.44"
features = ["macros", "rt-multi-thread"]

[dependencies.tower-http]
version = "0.6"
features = ["cors"]