[package]
name = "turtle-web"
version = "0.1.0"
authors.workspace = true
edition = "2024"
description = "Webserver for turtle graphics programs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
axum = "0.8"
anyhow = "1.0"
uuid = { version = "1.17", features = ["v4", "serde"] }

[dependencies.turtle]
path = ".."
features = ["examples"]
default-features = false

[dependencies.tokio]
version = "1.44"
features = ["macros", "rt-multi-thread"]

[dependencies.tower-http]
version = "0.6"
features = ["cors", "fs"]
